--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,7 +20,7 @@
         <div class="nav-container">
             <!-- Logo/Brand name -->
             <div class="nav-brand">
-                <a href="{{ url_for('main.index') }}">CodeLearner</a>
+                <a href="{{ url_for('main.index') }}">CodeLingo</a>
             </div>
             
             <!-- Navigation links -->
