--- a/app/templates/project_detail.html
+++ b/app/templates/project_detail.html
@@ -29,8 +29,11 @@
                 <select id="language-filter" class="filter-select">
                     <option value="">All Languages</option>
                     <option value="python">Python</option>
+                    <option value="cpp">C++</option>
                     <option value="javascript">JavaScript</option>
-                    <option value="html">HTML/CSS</option>
+                    <option value="css">CSS</option>
+                    <option value="html">HTML</option>
+                    <option value="java">Java</option>
                 </select>
                 
                 <label for="type-filter">Filter by Type:</label>
