--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -41,8 +41,11 @@
     <!-- Language tabs -->
     <div class="language-tabs">
         <button class="tab-button active" data-language="python">Python</button>
+        <button class="tab-button" data-language="cpp">C++</button>
         <button class="tab-button" data-language="javascript">JavaScript</button>
-        <button class="tab-button" data-language="html">HTML/CSS</button>
+        <button class="tab-button" data-language="css">CSS</button>
+        <button class="tab-button" data-language="html">HTML</button>
+        <button class="tab-button" data-language="java">Java</button>
     </div>
     
     <!-- Mode selector -->
